fixed overflow of text on low pixel

--- a/src/app/component/timetable-root/appointment/appointment.component.less
+++ b/src/app/component/timetable-root/appointment/appointment.component.less
@@ -29,11 +29,12 @@
 #title,
 #location,
 #appointment-start {
-    width: calc(100% - .5rem);
+    width: calc(100% - 1rem);
     text-align: left;
     padding-left: .5rem;
     text-overflow: hide;
     margin-top: .5rem;
+    overflow-wrap: break-word;
 }
 
 #location {
